--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
             <a href="#team" class="navbar-link">Team</a>
           </li>
 
-          <li>
+          <!-- <li>
             <a href="#gears" class="navbar-link">Gears</a>
-          </li>
+          </li> -->
 
-          <li>
+          <!-- <li>
             <a href="#contact" class="navbar-link">Contact</a>
-          </li>
+          </li> -->
 
         </ul>
 
@@ -122,7 +122,7 @@
 
       </nav>
 
-      <div class="header-actions">
+      <!-- <div class="header-actions">
 
         <button class="search">
           <ion-icon name="search-outline"></ion-icon>
@@ -138,7 +138,7 @@
 
         </button>
 
-      </div>
+      </div> -->
 
     </div>
 
@@ -158,19 +158,19 @@
       <section class="hero" id="hero">
         <div class="container">
 
-          <p class="hero-subtitle">The Season 8</p>
+          <p class="hero-subtitle">IITM BS Esports Society</p>
 
-          <h1 class="h1 hero-title">Steam</h1>
+          <h3 class="h1 hero-title">Heighers Esports</h3>
 
           <div class="btn-group">
-
-            <button class="btn btn-primary">
-              <span>Watch live</span>
+            <a href="https://www.youtube.com/c/HeighersEsports/videos" target="_blank"><button class="btn btn-primary">
+              <span>Watch previous events</span>
 
               <ion-icon name="play-circle"></ion-icon>
-            </button>
+            </button></a>
+            
 
-            <button class="btn btn-link">Dream making</button>
+            <a href="https://discord.com/invite/ucy42xpC" target="_blank"><button class="btn btn-link">Join</button></a>
 
           </div>
 
@@ -204,20 +204,23 @@
 
             <div class="about-content">
 
-              <p class="about-subtitle">Find team member</p>
+              <p class="about-subtitle">Bust the stress</p>
 
-              <h2 class="about-title">Experience just for gamers <strong>offer</strong> </h2>
+              <h2 class="about-title"><strong>Experience</strong> like none other </h2>
 
               <p class="about-text">
-                Nullam quis ante. Maecenas ullamcorper, dui et placerat feugiat, eros pede varius nisi, condimentum
-                viverra felis nunc
-                et lorem. In auctor lobortis lacus. Phasellus gravida semper nisi. Aliquam lobortis.
+                Greetings from <strong>Heighers eSports</strong>, the official eSports club of IITM BS. We are a group of passionate gamers who are here to provide you with the best gaming experience. We host various tournaments and events throughout the year.
               </p>
 
               <p class="about-bottom-text">
                 <ion-icon name="arrow-forward-circle-outline"></ion-icon>
 
-                <span>Will sharpen your brain and focus</span>
+                <span>Experience Gaming with fellow learners</span>
+              </p>
+              <p class="about-bottom-text">
+                <ion-icon name="arrow-forward-circle-outline"></ion-icon>
+
+                <span>Win exciting prizes</span>
               </p>
 
             </div>
@@ -238,15 +241,15 @@
 
             <div class="tournament-content">
 
-              <p class="tournament-subtitle">Check out our next</p>
+              <p class="tournament-subtitle">Check out our previous</p>
 
-              <h2 class="h3 tournament-title">Gaming tournaments !</h2>
+              <h2 class="h3 tournament-title">Gaming tournament</h2>
 
               <p class="tournament-text">
-                Lpsum dolor sit amet, consectetur adipiscing elit, sed labore et dolore magna aliqua.
+                AASTRA is the annual gaming tournament hosted by Heighers eSports. It is a 3-day event where we host various tournaments in various games. We also have a LAN party where you can play with your friends.
               </p>
 
-              <button class="btn btn-primary">Join with us</button>
+              <button class="btn btn-primary">Join Us</button>
 
             </div>
 
@@ -254,7 +257,7 @@
 
               <h2 class="h3 tournament-prize-title">Prize pool</h2>
 
-              <data value="80000">$80000</data>
+              <data value="80000">₹ 46000</data>
 
               <figure>
                 <img src="./assets/images/prize-img.png" alt="Prize image">
@@ -291,6 +294,28 @@
 
                   </div>
                 </li>
+                <li>
+                  <div class="winner-card">
+
+                    <figure class="card-banner">
+                      <img src="./assets/images/winner-img-1.png" alt="Winner image">
+                    </figure>
+
+                    <h3 class="h5 card-title">1st place</h3>
+
+                  </div>
+                </li>
+                <li>
+                  <div class="winner-card">
+
+                    <figure class="card-banner">
+                      <img src="./assets/images/winner-img-1.png" alt="Winner image">
+                    </figure>
+
+                    <h3 class="h5 card-title">1st place</h3>
+
+                  </div>
+                </li>
 
               </ul>
 
@@ -298,8 +323,93 @@
 
           </div>
         </section>
+        <!-- Upcomming games -->
+        <section class="tournament" id="tournament">
+          <div class="container">
 
+            <div class="tournament-content">
 
+              <p class="tournament-subtitle">Check out our UPCOMMING</p>
+
+              <h2 class="h3 tournament-title">Gaming Tournaments</h2>
+
+              <p class="tournament-text">
+                We are planning to host various tournaments in various games. We invite you to join us and experience the best gaming experience by joining the club.  
+              </p>
+
+              <button class="btn btn-primary">Join Us</button>
+
+            </div>
+
+            <div class="tournament-prize">
+
+              <h2 class="h3 tournament-prize-title">Prize pool</h2>
+
+              <data value="80000">Yet to be Decided</data>
+
+              <figure>
+                <img src="./assets/images/prize-img.png" alt="Prize image">
+              </figure>
+
+            </div>
+
+            <div class="tournament-winners">
+
+              <h2 class="h3 tournament-winners-title">Games</h2>
+
+              <ul class="tournament-winners-list">
+
+                <li>
+                  <div class="winner-card">
+
+                    <figure class="card-banner">
+                      <img src="./assets/images/winner-img-1.png" alt="Winner image">
+                    </figure>
+
+                    <h3 class="h5 card-title">Valorant</h3>
+
+                  </div>
+                </li>
+                <li>
+                  <div class="winner-card">
+
+                    <figure class="card-banner">
+                      <img src="./assets/images/winner-img-1.png" alt="Winner image">
+                    </figure>
+
+                    <h3 class="h5 card-title">CODM</h3>
+
+                  </div>
+                </li>
+                <li>
+                  <div class="winner-card">
+
+                    <figure class="card-banner">
+                      <img src="./assets/images/winner-img-1.png" alt="Winner image">
+                    </figure>
+
+                    <h3 class="h5 card-title">CSGO</h3>
+
+                  </div>
+                </li>
+                <li>
+                  <div class="winner-card">
+
+                    <figure class="card-banner">
+                      <img src="./assets/images/winner-img-2.png" alt="Winner image">
+                    </figure>
+
+                    <h3 class="h5 card-title">Scribbl</h3>
+
+                  </div>
+                </li>
+
+              </ul>
+
+            </div>
+
+          </div>
+        </section>
 
 
 
@@ -352,7 +462,7 @@
         <section class="team" id="team">
           <div class="container">
 
-            <h2 class="h2 section-title">Active Team Members</h2>
+            <h2 class="h2 section-title">The Team</h2>
 
             <ul class="team-list">
 
@@ -468,7 +578,7 @@
 
             </ul>
 
-            <button class="btn btn-primary">view all members</button>
+            <button class="btn btn-primary">Join the Team</button>
 
           </div>
         </section>
@@ -480,7 +590,7 @@
         <!-- 
           - #GEARS
         -->
-
+        <!--
         <section class="gears" id="gears">
           <div class="container">
 
@@ -648,7 +758,7 @@
 
           </div>
         </section>
-
+-->
 
 
 
@@ -725,18 +835,18 @@
                 <a href="#team" class="footer-menu-link">Team</a>
               </li>
 
-              <li>
+              <!-- <li>
                 <a href="#gears" class="footer-menu-link">Gears</a>
-              </li>
+              </li> -->
 
-              <li>
+              <!-- <li>
                 <a href="#" class="footer-menu-link">Contact</a>
-              </li>
+              </li> -->
 
             </ul>
 
             <div class="footer-input-wrapper">
-              <input type="text" name="message" required placeholder="Find Here Now" class="footer-input">
+              <input type="text" name="message" required placeholder="Searched disabled" class="footer-input">
 
               <button class="btn btn-primary">
                 <ion-icon name="search-outline"></ion-icon>
@@ -748,8 +858,32 @@
         </div>
 
         <div class="footer-quicklinks">
+          <p class="about-bottom-text">
+            <ion-icon name="arrow-forward-circle-outline"></ion-icon>
 
-          <ul class="quicklink-list">
+            <span>Community open to IITM BS Students only</span>
+          </p>
+          <p class="about-bottom-text">
+            <ion-icon name="arrow-forward-circle-outline"></ion-icon>
+
+            <span>RULE 2</span>
+          </p>
+          <p class="about-bottom-text">
+            <ion-icon name="arrow-forward-circle-outline"></ion-icon>
+
+            <span>RULE 3</span>
+          </p>
+          <p class="about-bottom-text">
+            <ion-icon name="arrow-forward-circle-outline"></ion-icon>
+
+            <span>RULE 4</span>
+          </p>
+          <p class="about-bottom-text">
+            <ion-icon name="arrow-forward-circle-outline"></ion-icon>
+
+            <span>RULE 5</span>
+          </p>
+          <!-- <ul class="quicklink-list">
 
             <li>
               <a href="#" class="quicklink-item">Faq</a>
@@ -767,30 +901,30 @@
               <a href="#" class="quicklink-item">Privacy</a>
             </li>
 
-          </ul>
+          </ul> -->
 
           <ul class="footer-social-list">
 
             <li>
-              <a href="#" class="footer-social-link">
+              <a href="https://discord.com/invite/ucy42xpC" class="footer-social-link">
                 <ion-icon name="logo-discord"></ion-icon>
               </a>
             </li>
 
-            <li>
+            <!-- <li>
               <a href="#" class="footer-social-link">
                 <ion-icon name="logo-twitch"></ion-icon>
               </a>
-            </li>
+            </li> -->
 
-            <li>
+            <!-- <li>
               <a href="#" class="footer-social-link">
                 <ion-icon name="logo-xbox"></ion-icon>
               </a>
-            </li>
+            </li> -->
 
             <li>
-              <a href="#" class="footer-social-link">
+              <a href="https://www.youtube.com/c/HeighersEsports" class="footer-social-link">
                 <ion-icon name="logo-youtube"></ion-icon>
               </a>
             </li>
@@ -805,12 +939,12 @@
     <div class="footer-bottom">
       <div class="container">
         <p class="copyright">
-          Copyright &copy; 2022 <a href="#">codewithsadee</a>. all rights reserved
+          Copyright &copy; 2022 <a href="https://codingclub.pichavaram.in/" target="_blank">Pichavaram's Coding Club</a>. all rights reserved
         </p>
 
-        <figure class="footer-bottom-img">
+        <!-- <figure class="footer-bottom-img">
           <img src="./assets/images/footer-bottom-img.png" alt="Online payment companies logo">
-        </figure>
+        </figure> -->
       </div>
     </div>
 
